# noxpt

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/kernels/: path_tracing.cl
assets/kernels/include/: bounding_box.h  brdf_sample.h  bvh_node.h  hit.h  lambert.h  light.h  material.h  plane.h  ray.h  sampling.h  triangle.h  utilities.h  vertex.h
cmake/: macros.cmake
scripts/: build_noxpt_visual.bat
src/: CMakeLists.txt  application.cpp  application.h  bvh.cpp  bvh.h  kernel_types.h  main.cpp  path_tracer.cpp  path_tracer.h  scene.cpp  scene.h
